// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleBasketSection component renders correctly 1`] = `
<div>
  <div
    class="SampleBasketSection Section-root Section-white css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RichText-root css-qiddyp"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
            data-testid="typography"
          >
            test rich text
          </p>
        </div>
        <div
          class="SampleBasketSectionProducts"
        >
          <button
            class="MuiButtonBase-root OverviewCard-clickable product-wrapper MuiBox-root css-c35yjo-MuiButtonBase-root"
            tabindex="0"
            type="button"
          >
            <img
              alt="sample-1"
              class="product-image OverviewCard-headerPicture css-7mgsqw-Media"
              src="http://localhost:8000/image-real-file-name.jpg"
              style="object-fit: contain; object-position: center;"
            />
            <div
              class="OverviewCard-body"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 OverviewCard-title OverviewCard-noBrandLogo css-1ekntu4-MuiTypography-root"
                data-testid="overview-card-body-title"
              />
              <div
                class="OverviewCard-text OverviewCard-withoutMargin css-fm25tm"
              >
                <div
                  class="product"
                >
                  <div
                    class="product-description"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 product-title css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      sample-1
                    </p>
                    <p
                      class="MuiTypography-root MuiTypography-body1 product-color css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      green | rough
                    </p>
                    <p
                      class="MuiTypography-root MuiTypography-body1 product-size css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      1x2x3 mm
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="css-1tho2wt"
                data-testid="overview-card-body-footer"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium product-button css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  MC: pdp.overview.removeSample
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="RemoveIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="complete-button"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            MC: pdp.overview.completeSampleOrder
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ShoppingCartIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleBasketSection component should render form after complete button press 1`] = `
<div>
  <div
    class="SampleBasketSection Section-root Section-white css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RichText-root css-qiddyp"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
            data-testid="typography"
          >
            test rich text
          </p>
        </div>
        <div
          class="SampleBasketSectionProducts"
        >
          <button
            class="MuiButtonBase-root OverviewCard-clickable product-wrapper MuiBox-root css-c35yjo-MuiButtonBase-root"
            tabindex="0"
            type="button"
          >
            <img
              alt="sample-1"
              class="product-image OverviewCard-headerPicture css-7mgsqw-Media"
              src="http://localhost:8000/image-real-file-name.jpg"
              style="object-fit: contain; object-position: center;"
            />
            <div
              class="OverviewCard-body"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 OverviewCard-title OverviewCard-noBrandLogo css-1ekntu4-MuiTypography-root"
                data-testid="overview-card-body-title"
              />
              <div
                class="OverviewCard-text OverviewCard-withoutMargin css-fm25tm"
              >
                <div
                  class="product"
                >
                  <div
                    class="product-description"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 product-title css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      sample-1
                    </p>
                    <p
                      class="MuiTypography-root MuiTypography-body1 product-color css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      green | rough
                    </p>
                    <p
                      class="MuiTypography-root MuiTypography-body1 product-size css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      1x2x3 mm
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="css-1tho2wt"
                data-testid="overview-card-body-footer"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium product-button css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  MC: pdp.overview.removeSample
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="RemoveIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Section-root css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-je89nd-MuiTypography-root"
          data-testid="typography"
        >
          Complete form
        </h2>
        <form
          class="Form-rightAlignButton css-yp4v13"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-spacing-xs-3  css-ef0aub-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root  css-1qw86q1-MuiFormControl-root-MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="text"
                  id="text-label"
                >
                  Text
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1fd4s4x-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    id="text"
                    name="text"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-yjsfm1"
                    >
                      <span>
                        Text
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper"
          >
            <button
              aria-label="samples ordering basket form submitted"
              class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Form-button css-11nrv4h-MuiButtonBase-root-MuiButton-root"
              data-action="sample-1-green-rough-1x2x3 mm"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"samples ordering basket form submitted\\",\\"action\\":\\"sample-1-green-rough-1x2x3 mm\\"}"
              tabindex="0"
              type="submit"
            >
              Submit
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="ArrowForwardIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          Dette nettstedet er beskyttet av reCAPTCHA og Googles 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
            data-testid="anchor-link"
            href="https://policies.google.com/privacy?hl=no-nb"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Personvernregler
            </span>
          </a>
           og 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
            data-testid="anchor-link"
            href="https://policies.google.com/terms?hl=no-nb"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Vilkår for bruk
            </span>
          </a>
           gjelder.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleBasketSection remove sample from basket when all samples are removed renders empty basket content and \`browse all products\` button 1`] = `
<div>
  <div
    class="SampleBasketSection Section-root Section-white css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RichText-root css-qiddyp"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
            data-testid="typography"
          >
            test rich text
          </p>
        </div>
        <div
          class="SampleBasketSectionProducts"
        />
        <div
          class="RichText-root css-qiddyp"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
            data-testid="typography"
          >
            your basket is empty.
          </p>
        </div>
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"action\\":\\"/no/zanda-brand/torvtak/\\",\\"label\\":\\"browse all products\\"}"
          href="/no/zanda-brand/torvtak/"
          tabindex="0"
        >
          browse all products
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowForwardIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
